# OME-IRIS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  index.html  pyproject.toml
.github/workflows/: draft-release.yml  publish-docs.yml  run-tests.yml
docs/src/: conf.py
src/OME_IRIS/: __init__.py  fetch.py  rocrate.py  verify.py
src/OME_IRIS/data/datasets/: jump-plate-example.yaml  nf1-cellpainting-shrunken.yaml  nuclei-3d.yaml  pediatric-cancer-atlas.yaml
tests/: test_fetch.py  test_rocrate.py  test_scaffold.py  test_verify.py
