[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=82.0.1" ]

[project]
name = "ome-iris"
version = "0.1.0"
description = "A tiny open bioimage dataset catalog with fetch and verify workflows."
readme = "README.md"
authors = [ { name = "Dave Bunten" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pandas>=3.0.3",
  "pillow>=10",
  "pyyaml>=6.0.3",
]
scripts.ome-iris = "OME_IRIS.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "pytest>=9.0.3",
  "ruff>=0.11",
]
docs = [
  "myst-nb>=1.3",
  "pydata-sphinx-theme>=0.18",
  "sphinx>=9.0.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
package-data.OME_IRIS = [
  "data/*.yaml",
  "data/*.csv",
  "data/datasets/*.yaml",
]
packages.find.where = [ "src" ]
packages.find.include = [ "OME_IRIS*" ]

[tool.pytest]
ini_options.pythonpath = [ "src" ]
ini_options.addopts = [ "-q" ]
